feat: editable config option for extensions
